Solved problemsÃ